--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "eslint": "^9.6.0",
     "jiti": "^1.21.6"
   }
