--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "dcc": "docker compose -f cicd/development/docker-compose.yaml --env-file .env"
   },
   "dependencies": {
     "@azoom/eslint-config": "^0.4.1",
@@ -16,6 +17,11 @@
   },
   "devDependencies": {
     "eslint": "^9.6.0",
-    "jiti": "^1.21.6"
+    "jiti": "^1.21.6",
+    "@firebase/app-types": "^0.9.2",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
+    "firebase-functions": "^5.0.1",
+    "nuxt-vuefire": "^1.0.2"
   }
 }
