--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "@azoom/eslint-config": "^0.4.1",
+    "@vueuse/core": "^10.11.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
   },
   "devDependencies": {
-    "eslint": "^9.6.0",
-    "jiti": "^1.21.6",
     "@firebase/app-types": "^0.9.2",
+    "eslint": "^9.6.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
     "firebase-functions": "^5.0.1",
+    "jiti": "^1.21.6",
     "nuxt-vuefire": "^1.0.2"
   }
 }
