--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@azoom/eslint-config": "^0.4.1",
+    "date-fns": "^3.6.0",
     "nuxt": "^3.12.3",
+    "superjson": "^2.2.1",
     "vue": "latest"
   },
   "devDependencies": {
